--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <!--- <title>COIN-Lab@TCD</title> --->
+<title>COIN-Lab@TCD</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
@@ -73,7 +74,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 12:21:30 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-24 01:04:33 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
