--- a/COIN/team.html
+++ b/COIN/team.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <!--- <title>Team Mebers</title> --->
+<title>COIN-Lab@TCD</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
@@ -265,7 +266,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 18:41:43 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-24 01:04:33 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
