--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <!--- <title>Viet Quoc Pham</title> --->
+<title>Viet Pham @TCD</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
@@ -89,8 +90,6 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021">Web o
 <p></div></p>
 <p><div id="Recent News"></p>
 <h2>Recent News</h2>
-<div class="infoblock">
-<div class="blockcontent">
 <ul>
 <li><p><a href="./COIN/opening.html"><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under the Irish Research Council's Postgraduate/Postdoctoral Programme. </p>
 </li>
@@ -119,7 +118,7 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021">Web o
 </ul>
 <p></div></p>
 <p><div id="Selected Publication"></p>
-<h2>Selected Publication <a href="publication.html"><font color=black size=+0.5>(Full Publication)</font></a></h2>
+<h2>Selected Publication</h2>
 <ol>
 <li><p>M. Le, H. T. Dinh, D. N. Nguyen, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2023.</p>
 </li>
@@ -157,7 +156,7 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021">Web o
 </ol>
 <p></div></p>
 <p><div id="Academic Bio"></p>
-<h2>Academic Bio (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=black size=+0.5>Complete CV</font></a> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=black size=+0.5>Short CV</font></a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=black size=+0.5>CV of Failure</font></a> - <a href="images\Portrait_Viet.jpg"><font color=black size=+0.5>Photo</font></a>)</h2>
+<h2>Academic Bio</h2>
 <p>I am currently an Assistant Professor in the Networks and Distributed Systems Discipline at the School of Computer Science and Statistics, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, Ireland. 
 I am also a Supervisor with the <a href="https://www.advance-crt.ie/">ADVANCE CRT centre</a> and an Associate Investigator at the <a href="https://connectcentre.ie/">CONNECT centre</a>, Ireland. 
 Prior to joining TCD, I was in various academic positions with <a href="https://www.khu.ac.kr/">Kyung Hee University</a>, <a href="https://www.changwon.ac.kr/">Changwon National University</a>, and <a href="https://www.pusan.ac.kr/">Pusan National University</a>. 
@@ -180,7 +179,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 00:20:26 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 01:11:31 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
