--- a/publication.html
+++ b/publication.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <!--- <title>Publications</title> --->
+<title>Viet Pham @TCD</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
@@ -427,9 +428,9 @@ MathJax.Hub.Config({
 <p><div id="Theses"></p>
 <h2>Theses</h2>
 <ul>
-<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_PhD_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking #1 in Engineering)</p>
+<li><p>Q.-V. Pham, &ldquo;<a href="Misc/theses/PHAM_PhD_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking #1 in Engineering)</p>
 </li>
-<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_MS_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
+<li><p>Q.-V. Pham, &ldquo;<a href="Misc/theses/PHAM_MS_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
 </li>
 <li><p>Q.-V. Pham, &ldquo;<a href="">Building an Observational Data Processing and Archiving Center for Automatic Water Level Gathering and Alarming System</a>&rdquo; (in Vietnamese), B.S. Thesis, Hanoi University of Science and Technology, Aug. 2013.</p>
 </li>
@@ -438,7 +439,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 00:21:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 01:14:44 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
