--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021">Web o
 <p></div></p>
 <p><div id="Recent News"></p>
 <h2>Recent News</h2>
+<div class="infoblock">
+<div class="blockcontent">
 <ul>
 <li><p><a href="./COIN/opening.html"><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under the Irish Research Council's Postgraduate/Postdoctoral Programme. </p>
 </li>
@@ -179,7 +181,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 01:11:31 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 09:47:03 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
