Update the form

--- a/module.html
+++ b/module.html
@@ -48,7 +48,6 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="COIN\home.html"|3>COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="module.html" class="current"|3>Modules</a></div>
-<div class="menu-item"><a href="ebook.html"|3>Ebooks</a></div>
 <div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
@@ -98,12 +97,34 @@ MathJax.Hub.Config({
 <li><p>Machine Learning Specialization: <a href="https://www.coursera.org/specializations/machine-learning-introduction">https://www.coursera.org/specializations/machine-learning-introduction</a></p>
 </li>
 </ul>
-<p></div></p>
+<p></div>
+</p>
+<p><div id="Ebooks"></p>
+<h2>Ebooks</h2>
+<ul>
+<li><p>Convex Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/">https://web.stanford.edu/&nbsp;boyd/cvxbook/</a></p>
+</li>
+<li><p>Reinforcement Learning: <a href="http://www.incompleteideas.net/book/the-book-2nd.html">http://www.incompleteideas.net/book/the-book-2nd.html</a></p>
+</li>
+<li><p>Dive into Deep Learning: <a href="https://d2l.ai/">https://d2l.ai/</a></p>
+</li>
+<li><p>Graph Neural Networks: Foundations, Frontiers, and Applications: <a href="https://graph-neural-networks.github.io/index.html">https://graph-neural-networks.github.io/index.html</a></p>
+</li>
+<li><p>Reinforcement Learning and Stochastic Optimization: <a href="https://castlelab.princeton.edu/rlso/">https://castlelab.princeton.edu/rlso/</a></p>
+</li>
+<li><p>Computer Networking: A Top-Down Approach: <a href="https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319">https://www.amazon.com/Computer-Networking-Top-Down-James-Kurose/dp/9356061319</a></p>
+</li>
+<li><p>Computer Architecture: A Quantitative Approach: <a href="https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X">https://www.amazon.co.uk/Computer-Architecture-Quantitative-Approach-Kaufmann/dp/012383872X</a></p>
+</li>
+</ul>
+<p></div>
+
+</p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 00:59:10 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
