--- a/module.html
+++ b/module.html
@@ -60,6 +60,8 @@ MathJax.Hub.Config({
 <p><div id="Modules"></p>
 <h2>Modules</h2>
 <ul>
+<li><p>2024 Spring: Microprocessor Systems (CSU23021)</p>
+</li>
 <li><p>2023 Spring: Microprocessor Systems (CSU23021)</p>
 </li>
 <li><p>2021 Winter: Artificial Intelligence for NextG Networks</p>
@@ -124,7 +126,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on 2023-11-24 10:20:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 10:27:31 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
